# auto-tuning-vllm

./: .gitignore  MANIFEST.in  README.md  benchmarks.json  config_test_v1.yaml  pyproject.toml  requirements.txt  test_installation.py
.github/workflows/: lint.yml  ruff.yml
auto_tune_vllm/: __init__.py
auto_tune_vllm.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
auto_tune_vllm/benchmarks/: __init__.py  config.py  custom_benchmark_template.py  guidellm.py  guidellm_provider.py  providers.py  vllm_bench_serve.py
auto_tune_vllm/cli/: __init__.py  main.py
auto_tune_vllm/core/: __init__.py  config.py  constraint.py  db_utils.py  parameters.py  study_controller.py  trial.py
auto_tune_vllm/core/storage/: postgres_utils.py  utils.py
auto_tune_vllm/execution/: __init__.py  backends.py  trial_controller.py
auto_tune_vllm/logging/: __init__.py  handlers.py  manager.py
auto_tune_vllm/schemas/: parameter_schema.yaml  parameter_schema_original.yaml  v0_10_0.yaml  v0_10_1_1.yaml  v0_11_0.yaml  vllm_defaults.yaml
auto_tune_vllm/schemas/vllm_defaults/: v0_10_0.yaml  v0_10_1_1.yaml
auto_tune_vllm/utils/: __init__.py  version_manager.py  vllm_cli_parser.py
auto_tune_vllm/visualization/: __init__.py  common.py  dashboard.py  multi_objective.py  single_objective.py
docs/: configuration.md  quick_start.md  ray_auto_start.md  ray_cluster_setup.md
examples/: README_optimization_guide.md  README_trial_configs.md  README_visualization.md  basic_usage.py  study_config.yaml  study_config_local_exec.yaml  study_config_minimal.yaml  study_config_no_postgres.yaml  study_config_optimization_examples.yaml  test_defaults_config.yaml  trial_config_comprehensive.yaml  trial_config_version_specific.yaml  versioned_defaults_demo.py  vllm_cli_demo.py
output/: vllm_cli_arguments.json  vllm_example_config.yaml  vllm_generated_schema.yaml
scripts/: generate_vllm_defaults.py
src/: first_val_on_bm.py  vllm_config.yaml
src/mlperf_studies/study_13/: optuna.db
src/mlperf_studies/study_17/: optuna.db
src/mlperf_studies/study_18/: optuna.db
src/mlperf_studies/study_19/: optuna.db
src/mlperf_studies/study_2/: optuna.db
src/mlperf_studies/study_20/: optuna.db
src/mlperf_studies/study_21/: optuna.db
src/mlperf_studies/study_22/: optuna.db
src/mlperf_studies/study_3/: optuna.db
src/mlperf_studies/study_30/: optuna.db
src/mlperf_studies/study_4/: optuna.db
src/mlperf_studies/study_7/: optuna.db
src/mlperf_studies/study_8/: optuna.db
src/mlperf_studies/study_9/: optuna.db
src/paralellism_tests/: tensor-test.py
src/serving/: benchmarking.py  main.py  optimization.py  run_baseline.py  utils.py  vllm_server.py
src/studies/study_25/: benchmarks_25.1.json  benchmarks_25.10.json  benchmarks_25.2.json  benchmarks_25.3.json  benchmarks_25.4.json  benchmarks_25.5.json  benchmarks_25.6.json  benchmarks_25.7.json  benchmarks_25.8.json  benchmarks_25.9.json  optuna.db
src/studies/study_26/: benchmarks_26.1.json  benchmarks_26.10.json  benchmarks_26.2.json  benchmarks_26.3.json  benchmarks_26.4.json  benchmarks_26.5.json  benchmarks_26.6.json  benchmarks_26.7.json  benchmarks_26.8.json  benchmarks_26.9.json  optuna.db
src/studies/study_27/: benchmarks_27.0.json  benchmarks_27.1.json  benchmarks_27.10.json  benchmarks_27.2.json  benchmarks_27.3.json  benchmarks_27.4.json  benchmarks_27.5.json  benchmarks_27.6.json  benchmarks_27.7.json  benchmarks_27.8.json  benchmarks_27.9.json  benchmarks_27.baseline.json  optuna.db
src/studies/study_28/: benchmarks_28.baseline.json  optuna.db
src/studies/study_29/: benchmarks_29.10.json  benchmarks_29.11.json  benchmarks_29.2.json  benchmarks_29.3.json  benchmarks_29.4.json  benchmarks_29.5.json  benchmarks_29.6.json  benchmarks_29.7.json  benchmarks_29.8.json  benchmarks_29.9.json  benchmarks_29.baseline.json  optuna.db
src/studies/study_30/: benchmarks_30.1.json  benchmarks_30.2.json  benchmarks_30.3.json  benchmarks_30.baseline.json  optuna.db
src/studies/study_31/: optuna.db
src/studies/study_32/: benchmarks_32.0.json  optuna.db  (+10 more)
src/visualization/: main_visualization.py
(+187 files in other folders)
