[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "auto-tune-vllm"
version = "0.1.0"
description = "Distributed hyperparameter optimization framework for vLLM serving"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
keywords = ["vllm", "optimization", "llm", "serving", "benchmarking", "ray"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.10"
dependencies = [
    "optuna>=3.0.0",
    "optuna-integration[botorch]>=4.0.0",
    "ray[default]>=2.0.0",
    "vllm>=0.11.0",
    "guidellm>=0.1.0",
    "pyyaml>=6.0",
    "pydantic>=2.0.0",
    "typer>=0.9.0",
    "rich>=13.0.0",
    "requests>=2.28.0",
    "gpytorch>=1.1"
]

[project.optional-dependencies]
postgresql = [
    "psycopg2-binary>=2.9.0",
]
dev = [
    "pytest>=7.0.0",
    "ruff>=0.1.0",
    "basedpyright>=1.1.0",
    "pre-commit>=3.0.0",
]
viz = [
    "plotly>=5.0.0",
    "pandas>=2.0.0",
]

[project.urls]
Homepage = "https://github.com/openshift-psap/auto-tuning-vllm"
Repository = "https://github.com/openshift-psap/auto-tuning-vllm"
Issues = "https://github.com/openshift-psap/auto-tuning-vllm/issues"

[project.scripts]
auto-tune-vllm = "auto_tune_vllm.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["auto_tune_vllm*"]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.basedpyright]
pythonVersion = "3.10"
typeCheckingMode = "recommended"
reportUnusedVariable = true
reportUnusedImport = true
